# TextualProgrammingInPython

./: .gitignore  README.md  make.bat  pyproject.toml  requirements.txt  start.bat
.github/workflows/: plct.yml
source/: conf.py  index.md
source/02_Console/: 02_Console_01_about_python.md  02_Console_02_programs.md  02_Console_03_text.md  02_Console_04_reading.md  02_Console_05_simple_computing_practice.md  02_Console_06_number_functions.md  02_Console_07_number_functions_practice.md  02_Console_08_if.md  02_Console_09_elif.md  02_Console_10_scripting.md  02_Console_11_collections.md  02_Console_12_algo_count_accumulate.md  02_Console_13_list.md  02_Console_15_defining_functions.md  02_Console_16_dict.md  index.md
source/10_Data collections/: 1_Tuple.md  2_Range.md  3_Strings and funcions on collections.md  4_Quiz.md  index.md
source/11_Counting and summing/: 1_Counting.md  2_Summing.md  index.md
source/12_Lists/: 1_Lists.md  2_Quiz.md  3_Computing with lists.md  index.md
source/13_Defining functions/: 1_Functions that return value.md  2_Quiz 1.md  3_No value functions.md  4_Quiz.md  index.md
source/14_Dictionaries/: 1_Dictionaries and building a dictionary.md  2_Quiz.md  index.md
source/1_Introduction to Python/: 1_About Python.md  2_Interactive work.md  index.md
source/2_Python programs/: 1_Assinging and printing.md  2_Starting a program and errors.md  index.md
source/3_Text values/: 1_Printing text and numbers.md  2_String operations.md  3_Quiz.md  index.md
source/4_Reading data/: 1_Text, and numbers.md  2_Quiz.md  index.md
(+16 files in other folders)
