[project]
name = "textual-programming-in-python"
version = "0.1.0"
description = "Textual Programming in Python"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "sphinx",
    "myst-parser",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "plct-cli",
    "setuptools<75",
]

[tool.uv]
package = false
